# MiniDriveWorld

./: README.md  README_WORK_ORDER.md  requirements.txt
configs/: model_config.yaml  train_config.yaml
cuda_kernels/: CMakeLists.txt  attention.cu
data/: __init__.py  dataset.py
docs/: PAPER_POTENTIAL.md  TOP_CONFERENCE_STRATEGY.md  roadmap.md
models/: __init__.py  world_model.py
scripts/: train.py
